<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <com.divyanshu.draw.widget.DrawView
      android:id="@+id/draw_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintDimensionRatio="1:1"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edit_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/edit_text_placeholder"
      app:layout_constraintBottom_toTopOf="@id/predicted_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/predicted_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/prediction_text_placeholder"
      android:textSize="15sp"
      android:textStyle="bold"
      android:gravity="center"
      app:layout_constraintBottom_toTopOf="@id/test_text"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/draw_view" />

  <TextView
      android:id="@+id/test_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/test_message"
      android:textSize="15sp"
      android:gravity="center"
      app:layout_constraintBottom_toTopOf="@id/clear_button"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/predicted_text" />

  <Button
      android:id="@+id/stroke_check_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="획순 연습"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.05"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

  <Button
      android:id="@+id/compare_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="체크"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.35"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

  <Button
      android:id="@+id/clear_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clear_button_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.65"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

  <Button
      android:id="@+id/data_generate_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="data 생성"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.95"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
